--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-
-Tsegamlak Paulos
+Sofonias Sintayehu <sofisintayehu19@gmail.com>
+ANTENEH Bizuneh <antukassaw1@gmail.com>
